@@ -5,7 +5,6 @@ import dj.models.identity.competition.model.dto.ModelReadDto;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ModelReadMapper {
@@ -20,21 +19,11 @@ public class ModelReadMapper {
                 .setCharacteristics(model.getCharacteristics());
     }
 
-    public Model toEntity(ModelReadDto dto) {
-        return new Model()
-                .setId(dto.getId())
-                .setAge(dto.getAge())
-                .setUser(dto.getUser())
-                .setSkills(dto.getSkills())
-                .setAchievements(dto.getAchievements())
-                .setCharacteristics(dto.getCharacteristics());
-    }
-
     public List<ModelReadDto> toDto(List<Model> models) {
         return models
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
